# proc-macro-workshop-solution

./: README.md
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: progress.rs
