[package]
name = "derive_builder"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
workshop-test-runner = { path = "../test-runner" }

[dependencies]
proc-macro2 = "0.4.30"
syn = { version="0.14.4", features=["full"] }
quote = "0.6.3"